--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -1798,7 +1798,7 @@ client-secret-id=معرف سر العميل
 client-version=نسخة العميل
 clock-skew=انحراف الساعة
 clock-skew-description=تعيين الوقت بالمللي ثانية الذي يمكن أن تختلف الساعات فيه قبل رفض التعليمة البرمجية. هذا يعني أنه يمكن لأداة الفحص تنفيذ التحقق من الصحة مقابل الوقت الحالي ثم إجراء عمليتي تحقق أخرتين (+ وقت انخراف الساعة / - وقت انحراف الساعة).
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=مُنفذ المجموعة
 cluster-name=اسم المجموعة
 cluster-name-help=اسم المجموعة المطلوب الانضمام إليها. يجب أن يتطابق الاسم مع المجموعة البعيدة عند تعيين "وضع التشغيل" إلى بعيد.
@@ -6234,7 +6234,7 @@ open-actions-menu=فتح قائمة الإجراءات
 open-analytics-cloud=فتح سحابة التحليلات
 open-commerce-order-content-web-portlet-instance-configuration-name=فتح عربات التسوق
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=افتح أدوات المطورين في المستعرض لعرض الحدوث المحدد.
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=فتح النموذج
 open-graph=Open Graph
 open-graph-alt-description=وصف بديل
