--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Verze klienta (Automatic Translation)
 clock-skew=Zkosení hodin (Automatic Translation)
 clock-skew-description=Nastavte čas v milisekundách, že hodiny se mohou lišit před kód bude odmítnut. To znamená, že kontrola může provést ověření proti aktuálnímu času a pak dvě další ověření (+ čas zkosení hodin / - čas zkosení hodin). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Vykonavatel vykonavatele clusteru (Automatic Translation)
 cluster-name=Název clusteru (Automatic Translation)
 cluster-name-help=Tato konfigurace platí pouze pro režim EMBEDDED (Vývoj). Nastavte název clusteru, ke který se chcete připojit. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Otevřít nabídku Akce (Automatic Translation)
 open-analytics-cloud=Otevřít cloud Analytics (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Chcete-li zobrazit vybraný výskyt, otevřete nástroje pro vývojáře v prohlížeči. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Otevřít formulář (Automatic Translation)
 open-graph=Otevřít graf (Automatic Translation)
 open-graph-alt-description=Alternativní popis (Automatic Translation)
