--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client-Secret-ID
 client-version=Client-Version
 clock-skew=Zeitabweichung
 clock-skew-description=Legen Sie die Zeit in Millisekunden fest, die die Uhren voneinander abweichen können, bevor ein Code abgelehnt wird. Dies bedeutet, dass der Prüfer eine Validierung anhand der aktuellen Zeit und anschließend zwei weitere Validierungen durchführen kann (+ Taktversatzzeit / - Taktversatzzeit).
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Clusterausführer
 cluster-name=Cluster-Name
 cluster-name-help=Name des Clusters, dem beigetreten werden soll. Der Name muss mit dem Remote-Cluster übereinstimmen, wenn die Betriebsart auf Remote eingestellt ist.
@@ -6234,7 +6234,7 @@ open-actions-menu=Aktionsmenü öffnen
 open-analytics-cloud=Analytics-Cloud öffnen
 open-commerce-order-content-web-portlet-instance-configuration-name=Warenkörbe öffnen
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Öffnen Sie die Entwicklertools im Browser, um das ausgewählte Ereignis anzuzeigen.
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Formular öffnen
 open-graph=Open Graph
 open-graph-alt-description=Alternativbeschreibung
