--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Asiakkaan salatunnus
 client-version=Asiakasohjelman Versio
 clock-skew=Kellopoikkeama
 clock-skew-description=Aseta millisekunteina aika, jonka kellot voivat erota ennen kuin koodi hylätään. Tämä tarkoittaa sitä, että tarkistaja voi tehdä validoinnin tämänhetkistä aikaa vasten ja kaksi muuta validointia (+kellopoikeama-aika/-kellopoikkeama-aika).
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Klusterin Suorittaja
 cluster-name=Klusterin Nimi
 cluster-name-help=Sen klusterin nimi, johon liitytään. Nimen on vastattava etäklusteria, kun Toimintatila on asetettu etätoiminnaksi.
@@ -6234,7 +6234,7 @@ open-actions-menu=Avaa Toimintovalikko
 open-analytics-cloud=Avaa Analytics-pilvi
 open-commerce-order-content-web-portlet-instance-configuration-name=Avaa Ostoskorit
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Katso valittu esiintymä avaamalla kehittäjän työkalut selaimessa.
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Avaa Lomake
 open-graph=Open Graph
 open-graph-alt-description=Vaihtoehtoinen Kuvaus
