--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -1798,7 +1798,7 @@ client-secret-id=ID du secret client
 client-version=Version du client
 clock-skew=Correction d'horloge
 clock-skew-description=Définissez le temps en millisecondes que les horloges peuvent différer avant qu'un code soit refusé. Cela signifie que le vérificateur peut effectuer une validation contre l'heure actuelle, puis deux autres validations (+ heure de correction de l'horloge ( - heure de correction de l'horloge).
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Exécuteur de cluster
 cluster-name=Nom de grappe
 cluster-name-help=Le nom de la grappe à rejoindre. Le nom doit correspondre à la grappe distante quand le mode d'opération est réglé sur distant.
@@ -6234,7 +6234,7 @@ open-actions-menu=Ouvrir le menu Actions
 open-analytics-cloud=Ouvrir Analytics Cloud
 open-commerce-order-content-web-portlet-instance-configuration-name=Ouvrir les paniers
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Ouvrez les outils de développement dans le navigateur pour voir l'occurrence sélectionnée.
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Ouvrir le formulaire
 open-graph=Open Graph
 open-graph-alt-description=Description de la balise Alt
