--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=क्लाइंट संस्करण (Automatic Translation)
 clock-skew=घड़ी तिरछा (Automatic Translation)
 clock-skew-description=मिलीसेकंड में समय निर्धारित करें कि कोड अस्वीकार किए जाने से पहले घड़ियां अलग-अलग हो सकती हैं। इसका मतलब यह है कि चेकर वर्तमान समय के खिलाफ एक सत्यापन प्रदर्शन कर सकता है और फिर दो और सत्यापन (+ घड़ी तिरछा समय/-घड़ी तिरछा समय) । (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=क्लस्टर निष्पादक (Automatic Translation)
 cluster-name=क्लस्टर नाम (Automatic Translation)
 cluster-name-help=यह विन्यास केवल एम्बेडेड (विकास) मोड पर लागू होता है। इसमें शामिल होने के लिए क्लस्टर का नाम सेट करें। (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=ओपन एक्शन मेनू (Automatic Translation)
 open-analytics-cloud=Analytics क्लाउड खोलें
 open-commerce-order-content-web-portlet-instance-configuration-name=गाड़ियां खोलें
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=चयनित घटना को देखने के लिए ब्राउज़र में डेवलपर टूल खोलें। (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=ओपन फॉर्म (Automatic Translation)
 open-graph=ओपन ग्राफ (Automatic Translation)
 open-graph-alt-description=ऑल्ट विवरण (Automatic Translation)
