--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Ügyfél titkos kulcsának azonosítója
 client-version=Ügyfél verziója
 clock-skew=Időcsúszás
 clock-skew-description=Állítsa be az órák közötti különbséget ezredmásodpercekben, amely felett a kód elutasításra kerül. Ez azt jelenti, hogy az ellenőrző hitelesítést végezhet, amely ellenőrzi az aktuális időt, és két további ellenőrzést végez (+ időcsúszás / - időcsúszás).
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Fürt végrehajtója
 cluster-name=Fürt neve
 cluster-name-help=A csatlakoztatni kívánt fürt neve. A névnek meg kell egyeznie a távoli fürttel, amikor a működési mód távoliként van beállítva.
@@ -6234,7 +6234,7 @@ open-actions-menu=Nyílt műveletek menü
 open-analytics-cloud=Analytics felhő megnyitása
 open-commerce-order-content-web-portlet-instance-configuration-name=Nyitott bevásárlókocsik
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Nyissa meg a böngészőben a fejlesztői eszközöket, és nézze meg a kiválasztott előfordulást.
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Űrlap megnyitása
 open-graph=Open Graph
 open-graph-alt-description=Alt. leírás
