--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -1798,7 +1798,7 @@ client-secret-id=クライアントシークレット ID
 client-version=クライアントのバージョン
 clock-skew=許容時刻誤差(クロックスキュー)
 clock-skew-description=コードが却下される時刻のずれをミリ秒単位で設定します。このチェッカーは現在時刻を検証した後、さらに2つの検証（+ clock skew time / - clock skew time）を行う場合があります。
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=クラスター エグゼキュータ
 cluster-name=クラスター名
 cluster-name-help=参加するクラスターの名前。操作モードがリモートに設定されている場合、名前はリモート クラスターと一致する必要があります。
@@ -6234,7 +6234,7 @@ open-actions-menu=操作メニューを開く
 open-analytics-cloud=Analytics Cloudを開く
 open-commerce-order-content-web-portlet-instance-configuration-name=カートを開く
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=選択した発生箇所を調べるには、ブラウザで開発者ツールを開いてください。
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=フォームを開く
 open-graph=Open Graph
 open-graph-alt-description=別の説明
