--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=클라이언트 버전 (Automatic Translation)
 clock-skew=시계 기울이기 (Automatic Translation)
 clock-skew-description=코드가 거부되기 전에 시계가 다를 수 있는 시간을 밀리초 단위로 설정합니다. 즉, 체커는 현재 시간에 대한 유효성 검사를 수행한 다음 두 번의 추가 유효성 검사(+ 클럭 왜곡 시간/- 클럭 왜곡 시간)를 수행할 수 있습니다. (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=클러스터 실행기 (Automatic Translation)
 cluster-name=클러스터 이름 (Automatic Translation)
 cluster-name-help=이 구성은 EMBEDDED(개발) 모드에만 적용됩니다. 조인할 클러스터의 이름을 설정합니다. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=작업 열기 메뉴 (Automatic Translation)
 open-analytics-cloud=Analytic Cloud 열기
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=선택한 발생을 보려면 브라우저에서 개발자 도구를 엽니다. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=양식 열기 (Automatic Translation)
 open-graph=그래프 열기 (Automatic Translation)
 open-graph-alt-description=Alt 설명 (Automatic Translation)
