--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Kliento versija (Automatic Translation)
 clock-skew=Laikrodis nerijos (Automatic Translation)
 clock-skew-description=Nustatykite laiką milisekundėmis, kad laikrodžiai gali skirtis prieš atmesdami kodą. Tai reiškia, kad tikrintuvas gali atlikti patvirtinimą pagal dabartinį laiką ir tada dar du patvirtinimus (+ laikrodžio nerijos laikas / - laikrodžio nerijos laikas). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Sankaupos vykdytojas (Automatic Translation)
 cluster-name=Sankaupos pavadinimas (Automatic Translation)
 cluster-name-help=Ši konfigūracija taikoma tik EMBEDDED (kūrimo) režimui. Nustatykite klasterio, prie kurios norite prisijungti, pavadinimą. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Atidaryti veiksmų meniu (Automatic Translation)
 open-analytics-cloud=Atidaryti "Analytics" debesį (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Naršyklėje atidarykite kūrėjo įrankius, kad pamatytumėte pasirinktą įvykį. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Atidaryti formą (Automatic Translation)
 open-graph=Atidaryti diagramą (Automatic Translation)
 open-graph-alt-description=Alternatyvus aprašas (Automatic Translation)
