--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Versi Pelanggan (Automatic Translation)
 clock-skew=Skew Jam (Automatic Translation)
 clock-skew-description=Tetapkan masa dalam mimpedan bahawa jam boleh berbeza sebelum kod akan ditolak. Ini bermakna pemeriksa boleh melakukan pengesahan terhadap masa semasa dan kemudian dua pengesahan selanjutnya (+ masa skew jam / - masa skew jam). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Pelaksana Kluster (Automatic Translation)
 cluster-name=Nama Kluster (Automatic Translation)
 cluster-name-help=Konfigurasi ini hanya terpakai kepada mod EMBEDDED (Pembangunan). Tetapkan nama kluster untuk menyertai. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Buka Menu Tindakan (Automatic Translation)
 open-analytics-cloud=Buka Awan Analisis (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Buka alat pembangun dalam pelayar untuk melihat kejadian yang dipilih. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Buka Borang (Automatic Translation)
 open-graph=Buka Graf (Automatic Translation)
 open-graph-alt-description=Perihalan Alt (Automatic Translation)
