--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Versiune client (Automatic Translation)
 clock-skew=Înclinare ceas (Automatic Translation)
 clock-skew-description=Setați ora în milisecunde în care ceasurile pot diferi înainte ca un cod să fie respins. Acest lucru înseamnă că verificatorul ar putea efectua o validare împotriva orei curente și apoi două validări suplimentare (+ timp de înclinare a ceasului / - timp de înclinare a ceasului). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Cluster Executor (Automatic Translation)
 cluster-name=Nume cluster (Automatic Translation)
 cluster-name-help=Această configurație se aplică numai modului EMBEDDED (Development). Setați numele clusterului să se alăture. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Deschidere meniu acțiuni (Automatic Translation)
 open-analytics-cloud=Deschidere Cloud Analytics (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Deschideți instrumente pentru dezvoltatori în browser pentru a vedea apariția selectată. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Deschidere formular (Automatic Translation)
 open-graph=Deschidere grafic (Automatic Translation)
 open-graph-alt-description=Descriere alt (Automatic Translation)
