--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Клиентская версия (Automatic Translation)
 clock-skew=Часы Skew (Automatic Translation)
 clock-skew-description=Установите время в миллисекундах, что часы могут отличаться, прежде чем код будет отклонен. Это означает, что проверка может выполнять проверку по отношению к текущему времени, а затем еще две проверки (время перекоса часов / - время перекоса часов). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Кластерный исполнитель (Automatic Translation)
 cluster-name=Название кластера (Automatic Translation)
 cluster-name-help=Эта конфигурация применяется только к режиму EMBEDDED (Development). Установите название кластера для присоединения. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Меню открытых действий (Automatic Translat
 open-analytics-cloud=Облако открытой аналитики (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Откройте инструменты разработчика в браузере, чтобы увидеть выбранное явление. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Открытая форма (Automatic Translation)
 open-graph=Открытый график (Automatic Translation)
 open-graph-alt-description=Описание Alt (Automatic Translation)
