--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Različica odjemalca (Automatic Translation)
 clock-skew=Ura skew (Automatic Translation)
 clock-skew-description=Nastavite čas v milisekundah, da se ure lahko razlikujejo, preden bo koda zavrnjena. To sredstvo skladiščnik strjena lava izvršiti nalogo a proglasitev pravnomočnosti ali pravne veljavnosti zoper tok čas ter torej dva naknaden proglasitev pravnomočnosti ali pravne veljavnosti (+ ura skew čas/-ura skew čas). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Izvršilec gruče (Automatic Translation)
 cluster-name=Ime gruče (Automatic Translation)
 cluster-name-help=Ta konfiguracija velja le za način EMBEDDED (Development). Nastavite ime gruče, da se pridruži. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Meni »Odpri dejanja« (Automatic Translation)
 open-analytics-cloud=Odpri oblak Analytics (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Odprite orodja razvijalcev v brskalniku in si oglejte izbrani pojav. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Odpri obrazec (Automatic Translation)
 open-graph=Odpri graf (Automatic Translation)
 open-graph-alt-description=Alt Opis (Automatic Translation)
