--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Hemligt klient-ID
 client-version=Klientversion
 clock-skew=Klockavvikelser
 clock-skew-description=Ställ in tid i millisekunder som klockorna kan skilja sig innan en kod avvisas. Det innebär att kontrolleraren kan göra en validering mot den nuvarande tiden och sedan ytterligare två valideringar (+tid för klockavvikelser/- tid för klockavvikelser).
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Kluster-executor
 cluster-name=Klusternamn
 cluster-name-help=Namn på kluster att ansluta till. Namnet får inte matcha fjärrklustret när åtgärdsläget är inställt på fjärr.
@@ -6234,7 +6234,7 @@ open-actions-menu=Öppna Åtgärder-menyn
 open-analytics-cloud=Öppna Analytics Cloud
 open-commerce-order-content-web-portlet-instance-configuration-name=Öppna kundvagnar
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Öppna utvecklarverktyg i webbläsaren för att visa vald förekomst.
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Öppna formulär
 open-graph=Open Graph
 open-graph-alt-description=Alternativ beskrivning
