--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=รุ่นของไคลเอ็นต์ (Automatic Translation)
 clock-skew=นาฬิกาเอียง (Automatic Translation)
 clock-skew-description=ตั้งค่าเวลาเป็นมิลลิวินาทีที่นาฬิกาอาจแตกต่างก่อนที่รหัสจะถูกปฏิเสธ ซึ่งหมายความว่าตัวตรวจสอบสามารถดําเนินการตรวจสอบกับเวลาปัจจุบันและจากนั้นสองการตรวจสอบเพิ่มเติม (+ เวลาลาดนาฬิกา / - เวลาลาดนาฬิกา) (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=ตัวดําเนินการคลัสเตอร์ (Automatic Translation)
 cluster-name=ชื่อคลัสเตอร์ (Automatic Translation)
 cluster-name-help=การตั้งค่าคอนฟิกนี้ใช้กับโหมด EMBEDDED (การพัฒนา) เท่านั้น ตั้งค่าชื่อของคลัสเตอร์ที่จะเข้าร่วม (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=เปิดเมนูการกระทํา (Automatic
 open-analytics-cloud=เปิดคลาวด์การวิเคราะห์ (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=เปิดเครื่องมือสําหรับนักพัฒนาในเบราว์เซอร์เพื่อดูเหตุการณ์ที่เลือก (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=เปิดฟอร์ม (Automatic Translation)
 open-graph=เปิดกราฟ (Automatic Translation)
 open-graph-alt-description=คําอธิบาย Alt (Automatic Translation)
