--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Phiên bản máy khách (Automatic Translation)
 clock-skew=Đồng hồ skew (Automatic Translation)
 clock-skew-description=Đặt thời gian trong mili giây mà đồng hồ có thể khác nhau trước khi mã sẽ bị từ chối. Điều này có nghĩa là kiểm tra có thể thực hiện một xác nhận với thời gian hiện tại và sau đó thêm hai validations (+ đồng hồ nghiêng thời gian/-thời gian nghiêng đồng hồ). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Trình thực thi cụm (Automatic Translation)
 cluster-name=Tên Cụm (Automatic Translation)
 cluster-name-help=Cấu hình này chỉ áp dụng cho chế độ EMBEDDED (Phát triển). Đặt tên của cụm để tham gia. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Mở Menu Hành động (Automatic Translation)
 open-analytics-cloud=Mở Đám mây Phân tích (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Mở công cụ dành cho nhà phát triển trong trình duyệt để xem sự kiện đã chọn. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Biểu mẫu Mở (Automatic Translation)
 open-graph=Biểu đồ mở (Automatic Translation)
 open-graph-alt-description=Mô tả Alt (Automatic Translation)
