--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1798,7 +1798,7 @@ client-secret-id=客户端密钥 ID
 client-version=客户端版本
 clock-skew=时钟漂移
 clock-skew-description=以毫秒为单位设置时钟可以出现差异的最大时长，在此之后代码将被拒绝。这意味着检查器可以对当前时间进行验证并进行两次额外验证（+ 时钟漂移时间/ - 时钟漂移时间）。
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=群集执行器
 cluster-name=群集名称
 cluster-name-help=此配置仅适用于 EMBEDDED 模式。设置要加入的群集名称。
@@ -6234,7 +6234,7 @@ open-actions-menu=打开操作菜单
 open-analytics-cloud=打开 Analytics Cloud
 open-commerce-order-content-web-portlet-instance-configuration-name=打开购物车
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=在浏览器中打开开发者工具以查看所选匹配项。
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=打开表单
 open-graph=Open Graph
 open-graph-alt-description=替换描述
