--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Kliendi versioon (Automatic Translation)
 clock-skew=Kell viltu (Automatic Translation)
 clock-skew-description=Määrake aeg millisekundites, et kellad võivad erineda enne koodi tagasilükkamist. See tähendab, et kontrollija võiks teha valideerimise võrreldes praeguse ajaga ja seejärel veel kaks valideerimist (+ kell viltu aeg / - kell viltu aeg). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Klastri käivitaja (Automatic Translation)
 cluster-name=Klastri nimi (Automatic Translation)
 cluster-name-help=See konfiguratsioon rakendub ainult EMBEDDED (Development) režiimile. Määrake klastri nimi liitumiseks. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Menüü Ava toimingud (Automatic Translation)
 open-analytics-cloud=Analyticsi pilve avamine (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Valitud esinemiskorra nägemiseks avage brauseris arendaja tööriistad. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Ava vorm (Automatic Translation)
 open-graph=Ava graafik (Automatic Translation)
 open-graph-alt-description=Asete kirjeldus (Automatic Translation)
