--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Client Version (Automatic Copy)
 clock-skew=Desfasamento horario
 clock-skew-description=Set the time in milliseconds that the clocks can differ before a code will be rejected. This means the checker could perform a validation against the current time and then two further validations (+ clock skew time / - clock skew time). (Automatic Copy)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Cluster Executor (Automatic Copy)
 cluster-name=Cluster Name (Automatic Copy)
 cluster-name-help=This configuration only applies to EMBEDDED (Development) mode. Set the name of the cluster to join. (Automatic Copy)
@@ -6234,7 +6234,7 @@ open-actions-menu=Open Actions Menu (Automatic Copy)
 open-analytics-cloud=Abrir Analytics Cloud
 open-commerce-order-content-web-portlet-instance-configuration-name=Carriños abertos
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Open developer tools in the browser to see the selected occurrence. (Automatic Copy)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Open Form (Automatic Copy)
 open-graph=Open Graph
 open-graph-alt-description=Alt Description (Automatic Copy)
