--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Versi Klien (Automatic Translation)
 clock-skew=Jam Skew (Automatic Translation)
 clock-skew-description=Mengatur waktu dalam milidetik bahwa jam dapat berbeda sebelum kode akan ditolak. Ini berarti Checker dapat melakukan validasi terhadap waktu saat ini dan kemudian dua validasi lebih lanjut (+ jam condong waktu/jam condong waktu). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Pelaksana Klaster (Automatic Translation)
 cluster-name=Nama Kluster (Automatic Translation)
 cluster-name-help=Konfigurasi ini hanya berlaku untuk mode EMBEDDED (Pengembangan). Atur nama kluster untuk bergabung. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Menu Buka Tindakan (Automatic Translation)
 open-analytics-cloud=Buka Cloud Analytics (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Buka alat pengembang di browser untuk melihat kemunculan yang dipilih. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Buka Formulir (Automatic Translation)
 open-graph=Buka Grafik (Automatic Translation)
 open-graph-alt-description=Deskripsi Alt (Automatic Translation)
