--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Versione client (Automatic Translation)
 clock-skew=Inclinazione dell'orologio (Automatic Translation)
 clock-skew-description=Impostare il tempo in millisecondi che gli orologi possono differire prima che un codice venga rifiutato. Ciò significa che il correttore potrebbe eseguire una convalida rispetto all'ora corrente e quindi a due ulteriori convalide (ora di inclinazione dell'orologio / - ora di inclinazione dell'orologio). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Esecutore cluster (Automatic Translation)
 cluster-name=Nome Cluster
 cluster-name-help=Questa configurazione si applica solo alla modalità EMBEDDED (Sviluppo). Impostare il nome del cluster a cui partecipare. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Menu Apri azioni (Automatic Translation)
 open-analytics-cloud=Apri Analytics Cloud
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Aprire gli strumenti di sviluppo nel browser per visualizzare l'occorrenza selezionata. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Apri modulo (Automatic Translation)
 open-graph=Grafico aperto (Automatic Translation)
 open-graph-alt-description=Descrizione alt (Automatic Translation)
