--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=גירסת לקוח (Automatic Translation)
 clock-skew=עיוות שעון
 clock-skew-description=הגדר את השעה באלפיות שניה שהשעונים יכולים להיות שונים לפני שהקוד ידחה. משמעות הדבר היא שבודק יכול לבצע אימות נגד הזמן הנוכחי ולאחר מכן שני אימותים נוספים (+ זמן הטיה לשעון). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=מבצע של האשכול
 cluster-name=שם האשכול
 cluster-name-help=שם האשכול להצטרפות. השם צריך להתאים לאשכול המרוחק כאשר מצב פעולה מוגדר כמרחוק.
@@ -6234,7 +6234,7 @@ open-actions-menu=פתיחת תפריט פעולות (Automatic Translation)
 open-analytics-cloud=ענן ניתוח פתוח (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=פתח כלי מפתחים בדפדפן כדי לראות את המופע שנבחר. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=פתח טופס (Automatic Translation)
 open-graph=פתח גרף (Automatic Translation)
 open-graph-alt-description=תיאור חלופי (Automatic Translation)
