--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=Verzia klienta (Automatic Translation)
 clock-skew=Hodiny skosenie (Automatic Translation)
 clock-skew-description=Pred odmietnutím kódu nastavte čas v milisekundách, počas ktorého sa hodiny môžu líšiť. To znamená, že kontrola môže vykonať overenie oproti aktuálnemu času a potom dve ďalšie overenia (+ hodiny skew čas / - hodiny skosenie čas). (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Spustiteľný súbor klastra (Automatic Translation)
 cluster-name=Názov klastra (Automatic Translation)
 cluster-name-help=Táto konfigurácia sa vzťahuje len na režim EMBEDDED (Development). Nastavte názov klastra, ku ktorý sa chcete pripojiť. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Ponuka Otvoriť akcie (Automatic Translation)
 open-analytics-cloud=Otvorenie služby Analytics Cloud (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Ak chcete zobraziť vybratý výskyt, otvorte v prehliadači vývojárske nástroje. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Otvoriť formulár (Automatic Translation)
 open-graph=Otvoriť graf (Automatic Translation)
 open-graph-alt-description=Alternatívny popis (Automatic Translation)
