--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -1798,7 +1798,7 @@ client-secret-id=Client Secret ID (Automatic Copy)
 client-version=İstemci Sürümü (Automatic Translation)
 clock-skew=Saat Eğriltme (Automatic Translation)
 clock-skew-description=Bir kod reddedilmeden önce saatlerin farklı olabileceği milisaniyecinsinden zaman ayarlayın. Bu, denetleyicinin geçerli zamana ve ardından iki doğrulamaya (+ saat çarpık zaman / - saat çarpık saati) karşı bir doğrulama gerçekleştirebileceği anlamına gelir. (Automatic Translation)
-close-fields-menu=Close fields menu (Automatic Copy)
+close-fields-menu=Close Fields Menu (Automatic Copy)
 cluster-executor-configuration-name=Küme Yürütücüsü (Automatic Translation)
 cluster-name=Küme Adı (Automatic Translation)
 cluster-name-help=Bu yapılandırma yalnızca EMBEDDED (Geliştirme) modu için geçerlidir. Katılmak için kümenin adını ayarlayın. (Automatic Translation)
@@ -6234,7 +6234,7 @@ open-actions-menu=Eylemler Menüsünü Aç (Automatic Translation)
 open-analytics-cloud=Açık Analytics Bulut (Automatic Translation)
 open-commerce-order-content-web-portlet-instance-configuration-name=Open Carts (Automatic Copy)
 open-developer-tools-in-the-browser-to-see-the-selected-occurrence=Seçili oluşumu görmek için tarayıcıda geliştirici araçlarını açın. (Automatic Translation)
-open-fields-menu=Open fields menu (Automatic Copy)
+open-fields-menu=Open Fields Menu (Automatic Copy)
 open-form=Formu Aç (Automatic Translation)
 open-graph=Grafiği Aç (Automatic Translation)
 open-graph-alt-description=Alt Açıklaması (Automatic Translation)
